# tools

crates/formatter/: Cargo.toml
crates/formatter/src/: format_json.rs  format_token.rs  format_tokens_macro.rs  lib.rs  printer.rs  token_cache.rs  tokens.rs
crates/formatter/src/printer/: cst_builder.rs
crates/formatter/tests/: spec_test.rs
crates/rome-cli/: Cargo.toml
crates/rome-cli/src/: main.rs
crates/rome-lsp/: Cargo.toml
crates/rome-lsp/src/: main.rs
crates/rome-server/: Cargo.toml
crates/rome-server/src/: client.rs  lib.rs  server.rs  utils.rs
crates/rome-server/src/analyser/: mod.rs
crates/rome-server/src/db/: mod.rs
crates/rslint_parser/src/: lossless_tree_sink.rs
crates/rslint_syntax/src/: generated.rs
xtask/src/codegen/: generate_syntax_kinds.rs
