[package]
name = "rome-formatter"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rslint_parser = "0.3.0"
rslint_syntax = "0.1.4"
rslint_rowan = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
hashbrown = "0.11.2"
lazy_static = "1.4.0"

[dev-dependencies]

