[package]
name = "rome-formatter"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rowan = "0.13.2"
syntax = { path = "../syntax" }
hashbrown = "0.11.2"
lazy_static = "1.4.0"

[dev-dependencies]

