[package]
name = "rome-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
rome-server = { path = "../rome-server", features = ["async_tokio"] }
rustyline = "9.0.0"
dirs = "4.0.0"
pretty_env_logger = "0.4.0"
