[package]
name = "rome-lsp"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tower-lsp = "0.14.1"
rslint_parser = "0.3.1"
rome-server = { path = "../rome-server" }
