[package]
name = "rome-server"
version = "0.1.0"
edition = "2018"

[dependencies]
salsa = "0.16.1"
rslint_parser = "0.3.1"
rslint_errors = "0.2.0"
rslint_core = "0.3.0"
tokio = { version = "1.12.0", optional = true }
flume = "0.10.9"
notify = "4.0.17"
log = "0.4.14"
pretty_env_logger = "0.4.0"
normpath = "0.3.1"

[features]
default = ["async_tokio"]
async_tokio = ["tokio"]
